--- a/ntp.conf
+++ b/ntp.conf
@@ -1,14 +1,5 @@
-driftfile /var/lib/ntp/drift
-
-restrict default nomodify notrap nopeer noquery
-
-restrict 127.0.0.1 
-restrict ::1
-
-server 216.239.35.0 iburst
-
-includefile /etc/ntp/crypto/pw
-
-keys /etc/ntp/keys
-
-disable monitor
+---
+- hosts: localhost
+  tasks:
+    - name: test playbook
+      debug: msg="this is my first jenkins"
